--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@giscus/react": "^2.2.8",
     "@vercel/analytics": "^0.1.10",
+    "@vercel/speed-insights": "^1.0.4",
     "gray-matter": "^4.0.3",
     "next": "^13.2.3",
     "nextra": "^2.2.17",
